--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,52 +4,48 @@ on:
     branches:
       - main
 env:
-  WORKSPACE: /home/frontend
-  PROJECT_NAME: folio
+  WORKSPACE: /home
+  PROJECT_NAME: ${{ github.event.repository.name }}
 jobs:
   deploy:
-    name: Go To Production
+    name: Deploy
     runs-on: self-hosted
+    #    needs: scripts.ts-docker-build
     steps:
-      - name: If Folder Not Found Clone
+      - name: If Not Found Clone
         run: |
           if [ ! -d "$WORKSPACE/$PROJECT_NAME" ]; then
-            mkdir -p "$WORKSPACE/$PROJECT_NAME"
-            cd "$WORKSPACE"
-            git clone https://${{ secrets.GH_TOKEN }}@github.com/trungthanh12081997/$PROJECT_NAME.git
-          else
-            echo "Directory already exists: $WORKSPACE/$PROJECT_NAME"
+            git clone https://${{ secrets.GH_TOKEN }}@github.com/trungthanh12081997/$PROJECT_NAME.git $WORKSPACE/$PROJECT_NAME
           fi
-        shell: bash
+        shell: /usr/bin/bash -e {0}
         env:
-          WORKSPACE: /home/frontend
+          WORKSPACE: /home
           PROJECT_NAME: folio
-
+      - name: Get Project Name
+        id: get_project
+        run: |
+          if [[ "${{github.event.head_commit.message}}" =~ \[cd-(.*)\] ]]; then
+            echo "::set-output name=project::${BASH_REMATCH[1]}"
+          else
+            echo ::set-output name=project::null
+          fi
       - name: Deploy
         run: |
-          echo "Deploying"
-          cd "$WORKSPACE/$PROJECT_NAME"
-          git config credential.helper '!f() { sleep 1; echo "username=${{ secrets.GH_USER }}"; echo "password=${{ secrets.GH_TOKEN }}"; }; f'
-          git checkout main
-          git pull --force
-
-          CONTAINER_EXISTS=$(docker-compose -f docker-compose.yml ps -q)
-          if [ -n "$CONTAINER_EXISTS" ]; then
-            IMAGE_NAME="${{ env.PROJECT_NAME }}"
-
-            # Lấy ID của container từ image
-            CONTAINER_ID=$(docker ps -q --filter "ancestor=$IMAGE_NAME")
-            echo "CONTAINER ID : $CONTAINER_ID"
-            if [ -n "$CONTAINER_ID" ]; then
-              docker stop $CONTAINER_ID
-              docker rm $CONTAINER_ID 
-              docker image rm $IMAGE_NAME
-            else
-              echo "No containers found for image $IMAGE_NAME"
-            fi
+          if [[ "${{ steps.get_project.outputs.project }}" != "null" ]]; then
+              echo "Deploying ${{ steps.get_project.outputs.project }}"
+              cd $WORKSPACE/$PROJECT_NAME
+              git config credential.helper '!f() { sleep 1; echo "username=${{ secrets.GH_USER }}"; echo "password=${{ secrets.GH_TOKEN }}"; }; f'
+              git checkout main
+              git pull
+              CONTAINER_EXISTS=$(docker-compose -f docker-compose.yml ps -q ${{ steps.get_project.outputs.project }})
+              if [ -n "$CONTAINER_EXISTS" ]; then
+                IMAGE_NAME="nest-pharmatech/${{ steps.get_project.outputs.project }}"
+                CONTAINER_ID=$(docker ps -q --filter "ancestor=$IMAGE_NAME")
+                docker stop $CONTAINER_ID
+                docker rm $CONTAINER_ID 
+                docker image rm $IMAGE_NAME
+              fi
+              docker-compose -f docker-compose.yml up -d ${{ steps.get_project.outputs.project }}
           else
-            echo "No running containers for service $IMAGE_NAME"
+              echo "No project to deploy"
           fi
-
-          docker-compose up -d
-        shell: bash
