--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           else
             echo "Project already exists. Skipping clone."
           fi
-        shell: /usr/bin/bash -e {0}
+        shell: /bash
         env:
           WORKSPACE: /home/frontend
           PROJECT_NAME: folio
