--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,10 +57,7 @@ jobs:
                 IMAGE_NAME="nest-pharmatech/${{ steps.get_project.outputs.project }}"
                 CONTAINER_ID=$(docker ps -q --filter "ancestor=$IMAGE_NAME")
                 echo "Stopping container ID: $CONTAINER_ID"
-                docker stop $CONTAINER_ID
-                docker rm $CONTAINER_ID 
-                echo "Removing image: $IMAGE_NAME"
-                docker image rm $IMAGE_NAME
+                docker-compose down -d
               else
                 echo "No existing container found."
               fi
